# SofaGLFW

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
SofaGLFW/: CMakeLists.txt  SofaGLFWConfig.cmake.in
SofaGLFW/bindings/: CMakeLists.txt
SofaGLFW/bindings/src/: Module_SofaGLFW.cpp
SofaGLFW/cmake/: packaging.cmake
SofaGLFW/src/SofaGLFW/: BaseGUIEngine.h  CaptureSnapshotDrawTool.cpp  CaptureSnapshotDrawTool.h  NullGUIEngine.cpp  NullGUIEngine.h  SceneSnapshot.cpp  SceneSnapshot.h  SimulationLoop.cpp  SimulationLoop.h  SofaGLFWBaseGUI.cpp  SofaGLFWBaseGUI.h  SofaGLFWGUI.cpp  SofaGLFWGUI.h  SofaGLFWMouseManager.cpp  SofaGLFWMouseManager.h  SofaGLFWWindow.cpp  SofaGLFWWindow.h  config.h.in  init.h  initSofaGLFW.cpp
SofaGLFW/src/SofaGLFW/utils/: VideoEncoder.cpp  VideoEncoder.h  VideoEncoderFFMPEG.cpp  VideoEncoderFFMPEG.h
SofaImGui/: CMakeLists.txt  SofaImGuiConfig.cmake.in
SofaImGui/bindings/: CMakeLists.txt  Module_SofaImGui.cpp
SofaImGui/bindings/src/: Binding_AdditionalGUI.cpp  Binding_AdditionalGUI.h  Binding_IOWindow.cpp  Binding_IOWindow.h  Binding_IOWindow_doc.h  Binding_MoveWindow.cpp  Binding_MoveWindow.h  Binding_MoveWindow_doc.h  Binding_MyRobotWindow.cpp  Binding_MyRobotWindow.h  Binding_MyRobotWindow_doc.h  Binding_PlottingWindow.cpp  Binding_PlottingWindow.h  Binding_PlottingWindow_doc.h  Binding_ProgramWindow.cpp  Binding_ProgramWindow.h  Binding_ProgramWindow_doc.h  Binding_SimulationState.cpp  Binding_SimulationState.h  Binding_SimulationState_doc.h  Module_SofaImGui.cpp
SofaImGui/cmake/: FindROS.cmake  environment.cmake
SofaImGui/example/: mygui.py
SofaImGui/extensions/SofaImGui.Camera/: CMakeLists.txt  README.md  SofaImGui.CameraConfig.cmake.in
SofaImGui/extensions/SofaImGui.Camera/src/SofaImGui.Camera/: CameraGUI.cpp  CameraGUI.h  config.h.in  init.cpp  init.h
SofaImGui/resources/: OpenSans-Regular.h  ProgramStyle.cpp  ProgramStyle.h  Roboto-Medium.h  Roboto-Regular.h  Style.cpp  Style.h  fa-regular-400.h  fa-solid-900.h
SofaImGui/src/SofaImGui/: AppIniFile.cpp  AppIniFile.h  FooterStatusBar.cpp  FooterStatusBar.h  ImGuiDataWidget.cpp  ImGuiDataWidget.h  ImGuiGUI.cpp  ImGuiGUI.h  ImGuiGUIEngine.cpp  ImGuiGUIEngine.h  ObjectColor.cpp  ObjectColor.h  UIStrings.h  Utils.cpp  Utils.h  config.h.in  init.h  initSofaImGui.cpp
SofaImGui/src/SofaImGui/guis/: AdditionalGUIManager.cpp  AdditionalGUIManager.h  AdditionalGUIRegistry.cpp  AdditionalGUIRegistry.h  BaseAdditionalGUI.cpp  BaseAdditionalGUI.h
SofaImGui/src/SofaImGui/guis/examples/: AdditionGUIExample.cpp  AdditionGUIExample.h  AdditionGUIExample2.cpp  AdditionGUIExample2.h
SofaImGui/src/SofaImGui/menus/: FileMenu.cpp  FileMenu.h  ViewMenu.cpp  ViewMenu.h
SofaImGui/src/SofaImGui/models/: Action.h  IPController.cpp  IPController.h  Move.cpp  Move.h  Program.cpp  Program.h  SimulationState.cpp  SimulationState.h  TCPTarget.cpp  TCPTarget.h  Track.cpp  Track.h  Trajectory.cpp  Trajectory.h
SofaImGui/src/SofaImGui/models/actions/: Action.h  Move.cpp  Move.h  Pick.cpp  Pick.h  StartMove.cpp  StartMove.h  Wait.cpp  Wait.h
SofaImGui/src/SofaImGui/models/actions/views/: MoveView.cpp  PickView.cpp  StartMoveView.cpp  WaitView.cpp
SofaImGui/src/SofaImGui/models/modifiers/: Modifier.h  Repeat.cpp  Repeat.h
SofaImGui/src/SofaImGui/models/modifiers/views/: RepeatView.cpp
SofaImGui/src/SofaImGui/widgets/: BoolWidget.cpp  BoolWidget.h  BoundingBoxWidget.h  Buttons.cpp  Buttons.h  DisplayFlagsWidget.cpp  DisplayFlagsWidget.h  Gizmos.cpp  Gizmos.h  IntWidget.cpp  IntWidget.h  LinearSpringWidget.h  MaterialWidget.cpp  MaterialWidget.h  RigidMass.cpp  RigidMass.h  ScalarWidget.cpp  ScalarWidget.h  TopologyElementVectorWidget.h  VecVectorWidget.h  VectorWidget.h  VectorWidgetCommon.h
SofaImGui/src/SofaImGui/windows/: BaseWindow.cpp  BaseWindow.h  Components.cpp  Components.h  ConnectionWindow.cpp  ConnectionWindow.h  DisplayFlags.cpp  DisplayFlags.h  IOWindow.cpp  IOWindow.h  Log.cpp  Log.h  LogWindow.cpp  LogWindow.h  MouseManager.cpp  MouseManager.h  MoveWindow.cpp  MoveWindow.h  MyRobotWindow.cpp  MyRobotWindow.h  Performances.cpp  Performances.h  PlottingWindow.cpp  PlottingWindow.h  Plugins.cpp  Plugins.h  Profiler.cpp  Profiler.h  ProgramWindow.cpp  ProgramWindow.h  ROSWindow.cpp  ROSWindow.h  SceneGraph.cpp  SceneGraph.h  SceneGraphWindow.cpp  SceneGraphWindow.h  Settings.cpp  Settings.h  Snapshot.cpp  Snapshot.h  (+14 more)
SofaImGui/tests/: CMakeLists.txt
SofaImGui/tests/windows/: IOWindow_test.cpp  ProgramWindow_test.cpp
exe/: CMakeLists.txt  Main.cpp  runSofaGLFWConfig.cmake.in
lib/: CMakeLists.txt  SofaGLFW.cpp  SofaGLFW.h  SofaGLFWGUI.cpp  SofaGLFWGUI.h  SofaGLFWWindow.cpp  SofaGLFWWindow.h
lib/SofaGLFWImgui/: CMakeLists.txt  ImGuiDataWidget.cpp  Roboto-Medium.h  Style.cpp  Style.h  fa-regular-400.h  fa-solid-900.h
lib/src/SofaGLFW/: CustomImGuiFileDialogConfig.h  NullGUIEngine.cpp  SofaGLFWBaseGUI.cpp  SofaGLFWBaseGUI.h  SofaGLFWGUI.cpp  SofaGLFWGUI.h  SofaGLFWImgui.cpp  SofaGLFWImgui.h  SofaGLFWWindow.cpp  SofaGLFWWindow.h  config.h  config.h.in  initSofaGLFW.cpp
